# ITC313-TP2

./: CMakeLists.txt  Client.cpp  Client.h  Commande.cpp  Commande.h  ConsoleTable.cpp  ConsoleTable.h  Magasin.cpp  Magasin.h  Makefile  Produit.cpp  Produit.h  README.md  main.cpp  mainMenu.cpp
